// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox select renders checkbox select groups successfully 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={true}
  isGrouped={true}
  onClear={[Function]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={null}
  variant="checkbox"
  width={null}
>
  <div
    className="pf-c-select pf-m-expanded"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-4"
      className=""
      id="pf-toggle-id-4"
      isActive={false}
      isExpanded={true}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={null}
      type="button"
      variant="checkbox"
    >
      <button
        aria-expanded={true}
        aria-haspopup={null}
        aria-labelledby=" pf-toggle-id-4"
        className="pf-c-select__toggle"
        id="pf-toggle-id-4"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <span
            className="pf-c-select__toggle-text"
          />
        </div>
        <CaretDownIcon
          className="pf-c-select__toggle-arrow"
          color="currentColor"
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-select__toggle-arrow"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </SelectToggle>
    <CheckboxSelect
      aria-label={null}
      aria-labelledby={null}
      checked={null}
      className=""
      isExpanded={false}
      isGrouped={true}
    >
      <FocusTrap
        _createFocusTrap={[Function]}
        active={true}
        focusTrapOptions={
          Object {
            "clickOutsideDeactivates": true,
          }
        }
        paused={false}
        tag="div"
      >
        <div>
          <div
            className="pf-c-select__menu"
          >
            <form
              className="pf-c-form"
              noValidate={true}
            >
              <div
                className="pf-c-form__group"
              >
                <CheckboxSelectGroup
                  className=""
                  key=".0"
                  label="group 1"
                  titleId="group-1"
                >
                  <div
                    className="pf-c-select__menu-group"
                  >
                    <div
                      aria-hidden={true}
                      className="pf-c-select__menu-group-title"
                      id="group-1"
                    >
                      group 1
                    </div>
                    <fieldset
                      aria-labelledby="group-1"
                      className="pf-c-form__fieldset"
                    >
                      <CheckboxSelectOption
                        className=""
                        index={0}
                        isChecked={null}
                        isDisabled={false}
                        key="0"
                        keyHandler={[Function]}
                        onClick={[Function]}
                        sendRef={[Function]}
                        value="Mr"
                      >
                        <label
                          className="pf-c-check pf-c-select__menu-item"
                          onKeyDown={[Function]}
                        >
                          <input
                            checked={false}
                            className="pf-c-check__input"
                            disabled={false}
                            id="Mr"
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <span
                            className="pf-c-check__label"
                          >
                            Mr
                          </span>
                        </label>
                      </CheckboxSelectOption>
                      <CheckboxSelectOption
                        className=""
                        index={1}
                        isChecked={null}
                        isDisabled={false}
                        key="1"
                        keyHandler={[Function]}
                        onClick={[Function]}
                        sendRef={[Function]}
                        value="Mrs"
                      >
                        <label
                          className="pf-c-check pf-c-select__menu-item"
                          onKeyDown={[Function]}
                        >
                          <input
                            checked={false}
                            className="pf-c-check__input"
                            disabled={false}
                            id="Mrs"
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <span
                            className="pf-c-check__label"
                          >
                            Mrs
                          </span>
                        </label>
                      </CheckboxSelectOption>
                      <CheckboxSelectOption
                        className=""
                        index={2}
                        isChecked={null}
                        isDisabled={false}
                        key="2"
                        keyHandler={[Function]}
                        onClick={[Function]}
                        sendRef={[Function]}
                        value="Ms"
                      >
                        <label
                          className="pf-c-check pf-c-select__menu-item"
                          onKeyDown={[Function]}
                        >
                          <input
                            checked={false}
                            className="pf-c-check__input"
                            disabled={false}
                            id="Ms"
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <span
                            className="pf-c-check__label"
                          >
                            Ms
                          </span>
                        </label>
                      </CheckboxSelectOption>
                      <CheckboxSelectOption
                        className=""
                        index={3}
                        isChecked={null}
                        isDisabled={false}
                        key="3"
                        keyHandler={[Function]}
                        onClick={[Function]}
                        sendRef={[Function]}
                        value="Other"
                      >
                        <label
                          className="pf-c-check pf-c-select__menu-item"
                          onKeyDown={[Function]}
                        >
                          <input
                            checked={false}
                            className="pf-c-check__input"
                            disabled={false}
                            id="Other"
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <span
                            className="pf-c-check__label"
                          >
                            Other
                          </span>
                        </label>
                      </CheckboxSelectOption>
                    </fieldset>
                  </div>
                </CheckboxSelectGroup>
                <CheckboxSelectGroup
                  className=""
                  key=".1"
                  label="group 2"
                  titleId="group-2"
                >
                  <div
                    className="pf-c-select__menu-group"
                  >
                    <div
                      aria-hidden={true}
                      className="pf-c-select__menu-group-title"
                      id="group-2"
                    >
                      group 2
                    </div>
                    <fieldset
                      aria-labelledby="group-2"
                      className="pf-c-form__fieldset"
                    >
                      <CheckboxSelectOption
                        className=""
                        index={4}
                        isChecked={null}
                        isDisabled={false}
                        key="0"
                        keyHandler={[Function]}
                        onClick={[Function]}
                        sendRef={[Function]}
                        value="Mr"
                      >
                        <label
                          className="pf-c-check pf-c-select__menu-item"
                          onKeyDown={[Function]}
                        >
                          <input
                            checked={false}
                            className="pf-c-check__input"
                            disabled={false}
                            id="Mr"
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <span
                            className="pf-c-check__label"
                          >
                            Mr
                          </span>
                        </label>
                      </CheckboxSelectOption>
                      <CheckboxSelectOption
                        className=""
                        index={5}
                        isChecked={null}
                        isDisabled={false}
                        key="1"
                        keyHandler={[Function]}
                        onClick={[Function]}
                        sendRef={[Function]}
                        value="Mrs"
                      >
                        <label
                          className="pf-c-check pf-c-select__menu-item"
                          onKeyDown={[Function]}
                        >
                          <input
                            checked={false}
                            className="pf-c-check__input"
                            disabled={false}
                            id="Mrs"
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <span
                            className="pf-c-check__label"
                          >
                            Mrs
                          </span>
                        </label>
                      </CheckboxSelectOption>
                      <CheckboxSelectOption
                        className=""
                        index={6}
                        isChecked={null}
                        isDisabled={false}
                        key="2"
                        keyHandler={[Function]}
                        onClick={[Function]}
                        sendRef={[Function]}
                        value="Ms"
                      >
                        <label
                          className="pf-c-check pf-c-select__menu-item"
                          onKeyDown={[Function]}
                        >
                          <input
                            checked={false}
                            className="pf-c-check__input"
                            disabled={false}
                            id="Ms"
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <span
                            className="pf-c-check__label"
                          >
                            Ms
                          </span>
                        </label>
                      </CheckboxSelectOption>
                      <CheckboxSelectOption
                        className=""
                        index={7}
                        isChecked={null}
                        isDisabled={false}
                        key="3"
                        keyHandler={[Function]}
                        onClick={[Function]}
                        sendRef={[Function]}
                        value="Other"
                      >
                        <label
                          className="pf-c-check pf-c-select__menu-item"
                          onKeyDown={[Function]}
                        >
                          <input
                            checked={false}
                            className="pf-c-check__input"
                            disabled={false}
                            id="Other"
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <span
                            className="pf-c-check__label"
                          >
                            Other
                          </span>
                        </label>
                      </CheckboxSelectOption>
                    </fieldset>
                  </div>
                </CheckboxSelectGroup>
              </div>
            </form>
          </div>
        </div>
      </FocusTrap>
    </CheckboxSelect>
  </div>
</Select>
`;

exports[`checkbox select renders closed successfully 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={false}
  isGrouped={false}
  onClear={[Function]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={null}
  variant="checkbox"
  width={null}
>
  <div
    className="pf-c-select"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-2"
      className=""
      id="pf-toggle-id-2"
      isActive={false}
      isExpanded={false}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={null}
      type="button"
      variant="checkbox"
    >
      <button
        aria-expanded={false}
        aria-haspopup={null}
        aria-labelledby=" pf-toggle-id-2"
        className="pf-c-select__toggle"
        id="pf-toggle-id-2"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <span
            className="pf-c-select__toggle-text"
          />
        </div>
        <CaretDownIcon
          className="pf-c-select__toggle-arrow"
          color="currentColor"
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-select__toggle-arrow"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </SelectToggle>
  </div>
</Select>
`;

exports[`checkbox select renders expanded successfully 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={true}
  isGrouped={false}
  onClear={[Function]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={null}
  variant="checkbox"
  width={null}
>
  <div
    className="pf-c-select pf-m-expanded"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-3"
      className=""
      id="pf-toggle-id-3"
      isActive={false}
      isExpanded={true}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={null}
      type="button"
      variant="checkbox"
    >
      <button
        aria-expanded={true}
        aria-haspopup={null}
        aria-labelledby=" pf-toggle-id-3"
        className="pf-c-select__toggle"
        id="pf-toggle-id-3"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <span
            className="pf-c-select__toggle-text"
          />
        </div>
        <CaretDownIcon
          className="pf-c-select__toggle-arrow"
          color="currentColor"
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-select__toggle-arrow"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </SelectToggle>
    <CheckboxSelect
      aria-label={null}
      aria-labelledby={null}
      checked={null}
      className=""
      isExpanded={false}
      isGrouped={false}
    >
      <FocusTrap
        _createFocusTrap={[Function]}
        active={true}
        focusTrapOptions={
          Object {
            "clickOutsideDeactivates": true,
          }
        }
        paused={false}
        tag="div"
      >
        <div>
          <div
            className="pf-c-select__menu"
          >
            <form
              className="pf-c-form"
              noValidate={true}
            >
              <div
                className="pf-c-form__group"
              >
                <fieldset
                  aria-label={null}
                  aria-labelledby={null}
                  className="pf-c-form__fieldset"
                >
                  <CheckboxSelectOption
                    className=""
                    index={0}
                    isChecked={null}
                    isDisabled={false}
                    key=".$0"
                    keyHandler={[Function]}
                    onClick={[Function]}
                    sendRef={[Function]}
                    value="Mr"
                  >
                    <label
                      className="pf-c-check pf-c-select__menu-item"
                      onKeyDown={[Function]}
                    >
                      <input
                        checked={false}
                        className="pf-c-check__input"
                        disabled={false}
                        id="Mr"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="pf-c-check__label"
                      >
                        Mr
                      </span>
                    </label>
                  </CheckboxSelectOption>
                  <CheckboxSelectOption
                    className=""
                    index={1}
                    isChecked={null}
                    isDisabled={false}
                    key=".$1"
                    keyHandler={[Function]}
                    onClick={[Function]}
                    sendRef={[Function]}
                    value="Mrs"
                  >
                    <label
                      className="pf-c-check pf-c-select__menu-item"
                      onKeyDown={[Function]}
                    >
                      <input
                        checked={false}
                        className="pf-c-check__input"
                        disabled={false}
                        id="Mrs"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="pf-c-check__label"
                      >
                        Mrs
                      </span>
                    </label>
                  </CheckboxSelectOption>
                  <CheckboxSelectOption
                    className=""
                    index={2}
                    isChecked={null}
                    isDisabled={false}
                    key=".$2"
                    keyHandler={[Function]}
                    onClick={[Function]}
                    sendRef={[Function]}
                    value="Ms"
                  >
                    <label
                      className="pf-c-check pf-c-select__menu-item"
                      onKeyDown={[Function]}
                    >
                      <input
                        checked={false}
                        className="pf-c-check__input"
                        disabled={false}
                        id="Ms"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="pf-c-check__label"
                      >
                        Ms
                      </span>
                    </label>
                  </CheckboxSelectOption>
                  <CheckboxSelectOption
                    className=""
                    index={3}
                    isChecked={null}
                    isDisabled={false}
                    key=".$3"
                    keyHandler={[Function]}
                    onClick={[Function]}
                    sendRef={[Function]}
                    value="Other"
                  >
                    <label
                      className="pf-c-check pf-c-select__menu-item"
                      onKeyDown={[Function]}
                    >
                      <input
                        checked={false}
                        className="pf-c-check__input"
                        disabled={false}
                        id="Other"
                        onChange={[Function]}
                        type="checkbox"
                      />
                      <span
                        className="pf-c-check__label"
                      >
                        Other
                      </span>
                    </label>
                  </CheckboxSelectOption>
                </fieldset>
              </div>
            </form>
          </div>
        </div>
      </FocusTrap>
    </CheckboxSelect>
  </div>
</Select>
`;

exports[`select single select renders closed successfully 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={false}
  isGrouped={false}
  onClear={[Function]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={null}
  variant="single"
  width={null}
>
  <div
    className="pf-c-select"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-0"
      className=""
      id="pf-toggle-id-0"
      isActive={false}
      isExpanded={false}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={null}
      type="button"
      variant="single"
    >
      <button
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-labelledby=" pf-toggle-id-0"
        className="pf-c-select__toggle"
        id="pf-toggle-id-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <span
            className="pf-c-select__toggle-text"
          >
            Mr
          </span>
        </div>
        <CaretDownIcon
          className="pf-c-select__toggle-arrow"
          color="currentColor"
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-select__toggle-arrow"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </SelectToggle>
  </div>
</Select>
`;

exports[`select single select renders expanded successfully 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={true}
  isGrouped={false}
  onClear={[Function]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={null}
  variant="single"
  width={null}
>
  <div
    className="pf-c-select pf-m-expanded"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-1"
      className=""
      id="pf-toggle-id-1"
      isActive={false}
      isExpanded={true}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={null}
      type="button"
      variant="single"
    >
      <button
        aria-expanded={true}
        aria-haspopup="listbox"
        aria-labelledby=" pf-toggle-id-1"
        className="pf-c-select__toggle"
        id="pf-toggle-id-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <span
            className="pf-c-select__toggle-text"
          >
            Mr
          </span>
        </div>
        <CaretDownIcon
          className="pf-c-select__toggle-arrow"
          color="currentColor"
          size="sm"
          title={null}
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            className="pf-c-select__toggle-arrow"
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
              transform=""
            />
          </svg>
        </CaretDownIcon>
      </button>
    </SelectToggle>
    <SingleSelect
      aria-label={null}
      aria-labelledby={null}
      className=""
      isExpanded={false}
      openedOnEnter={false}
      selected={null}
    >
      <ul
        aria-label={null}
        aria-labelledby={null}
        className="pf-c-select__menu"
        role="listbox"
      >
        <SelectOption
          className=""
          index={0}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$0"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Mr"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Mr
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={1}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$1"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Mrs"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Mrs
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={2}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$2"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Ms"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Ms
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={3}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$3"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Other"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Other
            </button>
          </li>
        </SelectOption>
      </ul>
    </SingleSelect>
  </div>
</Select>
`;

exports[`typeahead multi select renders closed successfully 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={false}
  isGrouped={false}
  onClear={[Function]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={null}
  variant="typeaheadmulti"
  width={null}
>
  <div
    className="pf-c-select"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-10"
      className=""
      id="pf-toggle-id-10"
      isActive={false}
      isExpanded={false}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={null}
      type="button"
      variant="typeaheadmulti"
    >
      <div
        className="pf-c-select__toggle pf-m-typeahead"
        onClick={[Function]}
        onKeyDown={[Function]}
        type={null}
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <input
            aria-label={null}
            className="pf-c-form-control pf-c-select__toggle-typeahead"
            id="select-multi-typeahead-typeahead"
            onChange={[Function]}
            placeholder={null}
            type="text"
            value=""
          />
        </div>
        <button
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-label="Options menu"
          aria-labelledby=" pf-toggle-id-10"
          className="pf-c-button pf-c-select__toggle-button"
          id="pf-toggle-id-10"
          onClick={[Function]}
        >
          <CaretDownIcon
            className="pf-c-select__toggle-arrow"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-select__toggle-arrow"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </div>
    </SelectToggle>
  </div>
</Select>
`;

exports[`typeahead multi select renders expanded successfully 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={true}
  isGrouped={false}
  onClear={[Function]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={null}
  variant="typeaheadmulti"
  width={null}
>
  <div
    className="pf-c-select pf-m-expanded"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-11"
      className=""
      id="pf-toggle-id-11"
      isActive={false}
      isExpanded={true}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={null}
      type="button"
      variant="typeaheadmulti"
    >
      <div
        className="pf-c-select__toggle pf-m-typeahead"
        onClick={[Function]}
        onKeyDown={[Function]}
        type={null}
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <input
            aria-label={null}
            className="pf-c-form-control pf-c-select__toggle-typeahead"
            id="select-multi-typeahead-typeahead"
            onChange={[Function]}
            placeholder={null}
            type="text"
            value=""
          />
        </div>
        <button
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-label="Options menu"
          aria-labelledby=" pf-toggle-id-11"
          className="pf-c-button pf-c-select__toggle-button"
          id="pf-toggle-id-11"
          onClick={[Function]}
        >
          <CaretDownIcon
            className="pf-c-select__toggle-arrow"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-select__toggle-arrow"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </div>
    </SelectToggle>
    <SingleSelect
      aria-label={null}
      aria-labelledby={null}
      className=""
      isExpanded={false}
      openedOnEnter={false}
      selected={null}
    >
      <ul
        aria-label={null}
        aria-labelledby={null}
        className="pf-c-select__menu"
        role="listbox"
      >
        <SelectOption
          className=""
          index={0}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$0"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Mr"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Mr
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={1}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$1"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Mrs"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Mrs
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={2}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$2"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Ms"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Ms
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={3}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$3"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Other"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Other
            </button>
          </li>
        </SelectOption>
      </ul>
    </SingleSelect>
  </div>
</Select>
`;

exports[`typeahead multi select renders selected successfully 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={true}
  isGrouped={false}
  onClear={[Function]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={
    Array [
      "Mr",
      "Mrs",
    ]
  }
  variant="typeaheadmulti"
  width={null}
>
  <div
    className="pf-c-select pf-m-expanded"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-12"
      className=""
      id="pf-toggle-id-12"
      isActive={false}
      isExpanded={true}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={null}
      type="button"
      variant="typeaheadmulti"
    >
      <div
        className="pf-c-select__toggle pf-m-typeahead"
        onClick={[Function]}
        onKeyDown={[Function]}
        type={null}
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <ChipGroup
            className=""
            collapsedText="\${remaining} more"
            expandedText="Show Less"
            withToolbar={false}
          >
            <ul
              className="pf-c-chip-group"
            >
              <InnerChipGroup
                className=""
                collapsedText="\${remaining} more"
                expandedText="Show Less"
                isOpen={false}
                onToggleCollapse={[Function]}
                withToolbar={false}
              >
                <Chip
                  className=""
                  closeBtnAriaLabel="Remove"
                  component="li"
                  isOverflowChip={false}
                  isReadOnly={false}
                  key=".$Mr"
                  onClick={[Function]}
                  tooltipPosition="top"
                >
                  <GenerateId
                    prefix="pf-random-id-"
                  >
                    <li
                      className="pf-c-chip"
                    >
                      <span
                        className="pf-c-chip__text"
                        id="pf-random-id-0"
                      >
                        Mr
                      </span>
                      <ChipButton
                        aria-labelledby="remove_pf-random-id-0 pf-random-id-0"
                        ariaLabel="Remove"
                        className=""
                        id="remove_pf-random-id-0"
                        onClick={[Function]}
                      >
                        <Button
                          aria-label="Remove"
                          aria-labelledby="remove_pf-random-id-0 pf-random-id-0"
                          className=""
                          component="button"
                          id="remove_pf-random-id-0"
                          isActive={false}
                          isBlock={false}
                          isDisabled={false}
                          isFocus={false}
                          isHover={false}
                          isInline={false}
                          onClick={[Function]}
                          type="button"
                          variant="plain"
                        >
                          <button
                            aria-disabled={null}
                            aria-label="Remove"
                            aria-labelledby="remove_pf-random-id-0 pf-random-id-0"
                            className="pf-c-button pf-m-plain"
                            disabled={false}
                            id="remove_pf-random-id-0"
                            onClick={[Function]}
                            tabIndex={null}
                            type="button"
                          >
                            <TimesCircleIcon
                              aria-hidden="true"
                              color="currentColor"
                              size="sm"
                              title={null}
                            >
                              <svg
                                aria-hidden="true"
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 512 512"
                                width="1em"
                              >
                                <path
                                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                                  transform=""
                                />
                              </svg>
                            </TimesCircleIcon>
                          </button>
                        </Button>
                      </ChipButton>
                    </li>
                  </GenerateId>
                </Chip>
                <Chip
                  className=""
                  closeBtnAriaLabel="close"
                  component="li"
                  isOverflowChip={true}
                  isReadOnly={false}
                  onClick={[Function]}
                  tooltipPosition="top"
                >
                  <GenerateId
                    prefix="pf-random-id-"
                  >
                    <li
                      className="pf-c-chip pf-m-overflow"
                    >
                      <ChipButton
                        ariaLabel="close"
                        className=""
                        onClick={[Function]}
                      >
                        <Button
                          aria-label="close"
                          className=""
                          component="button"
                          isActive={false}
                          isBlock={false}
                          isDisabled={false}
                          isFocus={false}
                          isHover={false}
                          isInline={false}
                          onClick={[Function]}
                          type="button"
                          variant="plain"
                        >
                          <button
                            aria-disabled={null}
                            aria-label="close"
                            className="pf-c-button pf-m-plain"
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={null}
                            type="button"
                          >
                            <span
                              className="pf-c-chip__text"
                            >
                              1 more
                            </span>
                          </button>
                        </Button>
                      </ChipButton>
                    </li>
                  </GenerateId>
                </Chip>
              </InnerChipGroup>
            </ul>
          </ChipGroup>
          <input
            aria-label={null}
            className="pf-c-form-control pf-c-select__toggle-typeahead"
            id="select-multi-typeahead-typeahead"
            onChange={[Function]}
            placeholder={null}
            type="text"
            value=""
          />
        </div>
        <button
          aria-label="Clear all"
          className="pf-c-button pf-m-plain pf-c-select__toggle-clear"
          onClick={[Function]}
        >
          <TimesCircleIcon
            aria-hidden={true}
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                transform=""
              />
            </svg>
          </TimesCircleIcon>
        </button>
        <button
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-label="Options menu"
          aria-labelledby=" pf-toggle-id-12"
          className="pf-c-button pf-c-select__toggle-button"
          id="pf-toggle-id-12"
          onClick={[Function]}
        >
          <CaretDownIcon
            className="pf-c-select__toggle-arrow"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-select__toggle-arrow"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </div>
    </SelectToggle>
    <SingleSelect
      aria-label={null}
      aria-labelledby={null}
      className=""
      isExpanded={false}
      openedOnEnter={false}
      selected={
        Array [
          "Mr",
          "Mrs",
        ]
      }
    >
      <ul
        aria-label={null}
        aria-labelledby={null}
        className="pf-c-select__menu"
        role="listbox"
      >
        <SelectOption
          className=""
          index={0}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={true}
          key=".$0"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Mr"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={true}
              className="pf-c-select__menu-item pf-m-selected"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Mr
              <CheckIcon
                aria-hidden={true}
                className="pf-c-select__menu-item-icon"
                color="currentColor"
                noVerticalAlign={true}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  className="pf-c-select__menu-item-icon"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={null}
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    transform=""
                  />
                </svg>
              </CheckIcon>
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={1}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={true}
          key=".$1"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Mrs"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={true}
              className="pf-c-select__menu-item pf-m-selected"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Mrs
              <CheckIcon
                aria-hidden={true}
                className="pf-c-select__menu-item-icon"
                color="currentColor"
                noVerticalAlign={true}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  className="pf-c-select__menu-item-icon"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={null}
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    transform=""
                  />
                </svg>
              </CheckIcon>
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={2}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$2"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Ms"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Ms
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={3}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$3"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Other"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Other
            </button>
          </li>
        </SelectOption>
      </ul>
    </SingleSelect>
  </div>
</Select>
`;

exports[`typeahead multi select test onChange 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={true}
  isGrouped={false}
  onClear={[MockFunction]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={null}
  variant="typeahead"
  width={null}
>
  <div
    className="pf-c-select pf-m-expanded"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-14"
      className=""
      id="pf-toggle-id-14"
      isActive={false}
      isExpanded={true}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={
        <div
          class="pf-c-select pf-m-expanded"
        >
          <div
            class="pf-c-select__toggle pf-m-typeahead"
          >
            <div
              class="pf-c-select__toggle-wrapper"
            >
              <input
                class="pf-c-form-control pf-c-select__toggle-typeahead"
                id="select-single-typeahead-typeahead"
                type="text"
                value="test"
              />
            </div>
            <button
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-label="Options menu"
              aria-labelledby=" pf-toggle-id-14"
              class="pf-c-button pf-c-select__toggle-button"
              id="pf-toggle-id-14"
            >
              <svg
                aria-hidden="true"
                class="pf-c-select__toggle-arrow"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <ul
            class="pf-c-select__menu"
            role="listbox"
          >
            <div
              class="pf-c-select__menu-item"
              index="0"
            >
              No results found
            </div>
          </ul>
        </div>
      }
      type="button"
      variant="typeahead"
    >
      <div
        className="pf-c-select__toggle pf-m-typeahead"
        onClick={[Function]}
        onKeyDown={[Function]}
        type={null}
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <input
            aria-label={null}
            className="pf-c-form-control pf-c-select__toggle-typeahead"
            id="select-single-typeahead-typeahead"
            onChange={[Function]}
            placeholder={null}
            type="text"
            value="test"
          />
        </div>
        <button
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-label="Options menu"
          aria-labelledby=" pf-toggle-id-14"
          className="pf-c-button pf-c-select__toggle-button"
          id="pf-toggle-id-14"
          onClick={[Function]}
        >
          <CaretDownIcon
            className="pf-c-select__toggle-arrow"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-select__toggle-arrow"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </div>
    </SelectToggle>
    <SingleSelect
      aria-label={null}
      aria-labelledby={null}
      className=""
      isExpanded={false}
      openedOnEnter={false}
      selected={null}
    >
      <ul
        aria-label={null}
        aria-labelledby={null}
        className="pf-c-select__menu"
        role="listbox"
      >
        <div
          className="pf-c-select__menu-item"
          index={0}
          isSelected={false}
          key=".0"
          keyHandler={[Function]}
          sendRef={[Function]}
        >
          No results found
        </div>
      </ul>
    </SingleSelect>
  </div>
</Select>
`;

exports[`typeahead select renders closed successfully 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={false}
  isGrouped={false}
  onClear={[Function]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={null}
  variant="typeahead"
  width={null}
>
  <div
    className="pf-c-select"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-5"
      className=""
      id="pf-toggle-id-5"
      isActive={false}
      isExpanded={false}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={null}
      type="button"
      variant="typeahead"
    >
      <div
        className="pf-c-select__toggle pf-m-typeahead"
        onClick={[Function]}
        onKeyDown={[Function]}
        type={null}
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <input
            aria-label={null}
            className="pf-c-form-control pf-c-select__toggle-typeahead"
            id="select-single-typeahead-typeahead"
            onChange={[Function]}
            placeholder={null}
            type="text"
            value=""
          />
        </div>
        <button
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-label="Options menu"
          aria-labelledby=" pf-toggle-id-5"
          className="pf-c-button pf-c-select__toggle-button"
          id="pf-toggle-id-5"
          onClick={[Function]}
        >
          <CaretDownIcon
            className="pf-c-select__toggle-arrow"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-select__toggle-arrow"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </div>
    </SelectToggle>
  </div>
</Select>
`;

exports[`typeahead select renders expanded successfully 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={true}
  isGrouped={false}
  onClear={[Function]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={null}
  variant="typeahead"
  width={null}
>
  <div
    className="pf-c-select pf-m-expanded"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-6"
      className=""
      id="pf-toggle-id-6"
      isActive={false}
      isExpanded={true}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={null}
      type="button"
      variant="typeahead"
    >
      <div
        className="pf-c-select__toggle pf-m-typeahead"
        onClick={[Function]}
        onKeyDown={[Function]}
        type={null}
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <input
            aria-label={null}
            className="pf-c-form-control pf-c-select__toggle-typeahead"
            id="select-single-typeahead-typeahead"
            onChange={[Function]}
            placeholder={null}
            type="text"
            value=""
          />
        </div>
        <button
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-label="Options menu"
          aria-labelledby=" pf-toggle-id-6"
          className="pf-c-button pf-c-select__toggle-button"
          id="pf-toggle-id-6"
          onClick={[Function]}
        >
          <CaretDownIcon
            className="pf-c-select__toggle-arrow"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-select__toggle-arrow"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </div>
    </SelectToggle>
    <SingleSelect
      aria-label={null}
      aria-labelledby={null}
      className=""
      isExpanded={false}
      openedOnEnter={false}
      selected={null}
    >
      <ul
        aria-label={null}
        aria-labelledby={null}
        className="pf-c-select__menu"
        role="listbox"
      >
        <SelectOption
          className=""
          index={0}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$0"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Mr"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Mr
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={1}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$1"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Mrs"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Mrs
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={2}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$2"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Ms"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Ms
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={3}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$3"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Other"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Other
            </button>
          </li>
        </SelectOption>
      </ul>
    </SingleSelect>
  </div>
</Select>
`;

exports[`typeahead select renders selected successfully 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={true}
  isGrouped={false}
  onClear={[Function]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections="Mr"
  variant="typeahead"
  width={null}
>
  <div
    className="pf-c-select pf-m-expanded"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-7"
      className=""
      id="pf-toggle-id-7"
      isActive={false}
      isExpanded={true}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={null}
      type="button"
      variant="typeahead"
    >
      <div
        className="pf-c-select__toggle pf-m-typeahead"
        onClick={[Function]}
        onKeyDown={[Function]}
        type={null}
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <input
            aria-label={null}
            className="pf-c-form-control pf-c-select__toggle-typeahead"
            id="select-single-typeahead-typeahead"
            onChange={[Function]}
            placeholder={null}
            type="text"
            value="Mr"
          />
        </div>
        <button
          aria-label="Clear all"
          className="pf-c-button pf-m-plain pf-c-select__toggle-clear"
          onClick={[Function]}
        >
          <TimesCircleIcon
            aria-hidden={true}
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                transform=""
              />
            </svg>
          </TimesCircleIcon>
        </button>
        <button
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-label="Options menu"
          aria-labelledby=" pf-toggle-id-7"
          className="pf-c-button pf-c-select__toggle-button"
          id="pf-toggle-id-7"
          onClick={[Function]}
        >
          <CaretDownIcon
            className="pf-c-select__toggle-arrow"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-select__toggle-arrow"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </div>
    </SelectToggle>
    <SingleSelect
      aria-label={null}
      aria-labelledby={null}
      className=""
      isExpanded={false}
      openedOnEnter={false}
      selected="Mr"
    >
      <ul
        aria-label={null}
        aria-labelledby={null}
        className="pf-c-select__menu"
        role="listbox"
      >
        <SelectOption
          className=""
          index={0}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={true}
          key=".$0"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Mr"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={true}
              className="pf-c-select__menu-item pf-m-selected"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Mr
              <CheckIcon
                aria-hidden={true}
                className="pf-c-select__menu-item-icon"
                color="currentColor"
                noVerticalAlign={true}
                size="sm"
                title={null}
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby={null}
                  className="pf-c-select__menu-item-icon"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={null}
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    transform=""
                  />
                </svg>
              </CheckIcon>
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={1}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$1"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Mrs"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Mrs
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={2}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$2"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Ms"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Ms
            </button>
          </li>
        </SelectOption>
        <SelectOption
          className=""
          index={3}
          isDisabled={false}
          isPlaceholder={false}
          isSelected={false}
          key=".$3"
          keyHandler={[Function]}
          onClick={[Function]}
          sendRef={[Function]}
          value="Other"
        >
          <li
            role="presentation"
          >
            <button
              aria-selected={null}
              className="pf-c-select__menu-item"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              Other
            </button>
          </li>
        </SelectOption>
      </ul>
    </SingleSelect>
  </div>
</Select>
`;

exports[`typeahead select test onChange 1`] = `
<Select
  aria-label={null}
  ariaLabelClear="Clear all"
  ariaLabelRemove="Remove"
  ariaLabelToggle="Options menu"
  ariaLabelTypeAhead={null}
  ariaLabelledBy={null}
  className=""
  isExpanded={true}
  isGrouped={false}
  onClear={[MockFunction]}
  onSelect={[MockFunction]}
  onToggle={[MockFunction]}
  placeholderText={null}
  selections={null}
  variant="typeahead"
  width={null}
>
  <div
    className="pf-c-select pf-m-expanded"
    style={
      Object {
        "width": null,
      }
    }
  >
    <SelectToggle
      ariaLabelToggle="Options menu"
      ariaLabelledBy=" pf-toggle-id-9"
      className=""
      id="pf-toggle-id-9"
      isActive={false}
      isExpanded={true}
      isFocused={false}
      isHovered={false}
      isPlain={false}
      onClose={[Function]}
      onEnter={[Function]}
      onToggle={[MockFunction]}
      parentRef={
        <div
          class="pf-c-select pf-m-expanded"
        >
          <div
            class="pf-c-select__toggle pf-m-typeahead"
          >
            <div
              class="pf-c-select__toggle-wrapper"
            >
              <input
                class="pf-c-form-control pf-c-select__toggle-typeahead"
                id="select-single-typeahead-typeahead"
                type="text"
                value="test"
              />
            </div>
            <button
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-label="Options menu"
              aria-labelledby=" pf-toggle-id-9"
              class="pf-c-button pf-c-select__toggle-button"
              id="pf-toggle-id-9"
            >
              <svg
                aria-hidden="true"
                class="pf-c-select__toggle-arrow"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  transform=""
                />
              </svg>
            </button>
          </div>
          <ul
            class="pf-c-select__menu"
            role="listbox"
          >
            <div
              class="pf-c-select__menu-item"
              index="0"
            >
              No results found
            </div>
          </ul>
        </div>
      }
      type="button"
      variant="typeahead"
    >
      <div
        className="pf-c-select__toggle pf-m-typeahead"
        onClick={[Function]}
        onKeyDown={[Function]}
        type={null}
      >
        <div
          className="pf-c-select__toggle-wrapper"
        >
          <input
            aria-label={null}
            className="pf-c-form-control pf-c-select__toggle-typeahead"
            id="select-single-typeahead-typeahead"
            onChange={[Function]}
            placeholder={null}
            type="text"
            value="test"
          />
        </div>
        <button
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-label="Options menu"
          aria-labelledby=" pf-toggle-id-9"
          className="pf-c-button pf-c-select__toggle-button"
          id="pf-toggle-id-9"
          onClick={[Function]}
        >
          <CaretDownIcon
            className="pf-c-select__toggle-arrow"
            color="currentColor"
            size="sm"
            title={null}
          >
            <svg
              aria-hidden={true}
              aria-labelledby={null}
              className="pf-c-select__toggle-arrow"
              fill="currentColor"
              height="1em"
              role="img"
              style={
                Object {
                  "verticalAlign": "-0.125em",
                }
              }
              viewBox="0 0 320 512"
              width="1em"
            >
              <path
                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                transform=""
              />
            </svg>
          </CaretDownIcon>
        </button>
      </div>
    </SelectToggle>
    <SingleSelect
      aria-label={null}
      aria-labelledby={null}
      className=""
      isExpanded={false}
      openedOnEnter={false}
      selected={null}
    >
      <ul
        aria-label={null}
        aria-labelledby={null}
        className="pf-c-select__menu"
        role="listbox"
      >
        <div
          className="pf-c-select__menu-item"
          index={0}
          isSelected={false}
          key=".0"
          keyHandler={[Function]}
          sendRef={[Function]}
        >
          No results found
        </div>
      </ul>
    </SingleSelect>
  </div>
</Select>
`;
